checker/tests/calledmethods-lombok/LombokToBuilderExample.java
// Generated by delombok at Thu Aug 01 13:10:11 PDT 2019
// A test for support for the toBuilder() method in Lombok builders.
class LombokToBuilderExample {
    @lombok.NonNull String req;

    static void test(LombokToBuilderExample foo) {
        foo.toBuilder().build();
    }

    static void ensureThatErrorIssued() {
        // :: error: finalizer.invocation.invalid
        LombokToBuilderExample.builder().build();
    }

    @java.lang.SuppressWarnings("all")
    @lombok.Generated
    LombokToBuilderExample(@lombok.NonNull final String req) {
        if (req == null) {
            throw new java.lang.NullPointerException("req is marked non-null but is null");
        }
        this.req = req;
    }

    @java.lang.SuppressWarnings("all")
    @lombok.Generated
    public static class LombokToBuilderExampleBuilder {
        @java.lang.SuppressWarnings("all")
        @lombok.Generated
        private String req;

        @java.lang.SuppressWarnings("all")
        @lombok.Generated
        LombokToBuilderExampleBuilder() {}

        @java.lang.SuppressWarnings("all")
        @lombok.Generated
        public LombokToBuilderExampleBuilder req(@lombok.NonNull final String req) {
            if (req == null) {
                throw new java.lang.NullPointerException("req is marked non-null but is null");
            }
            this.req = req;
            return this;
        }

        @java.lang.SuppressWarnings("all")
        @lombok.Generated
        public LombokToBuilderExample build() {
            return new LombokToBuilderExample(req);
        }

        @java.lang.Override
        @java.lang.SuppressWarnings("all")
        @lombok.Generated
        public java.lang.String toString() {
            return "LombokToBuilderExample.LombokToBuilderExampleBuilder(req=" + this.req + ")";
        }
    }

    @java.lang.SuppressWarnings("all")
    @lombok.Generated
    public static LombokToBuilderExampleBuilder builder() {
        return new LombokToBuilderExampleBuilder();
    }

    @java.lang.SuppressWarnings("all")
    @lombok.Generated
    public LombokToBuilderExampleBuilder toBuilder() {
        return new LombokToBuilderExampleBuilder().req(this.req);
    }
}
